# rig-evals-rag

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  justfile
.github/: copilot-instructions.md
docs/: decisions.md
examples/: eval_memvid.rs  ingestion_cti_pipeline.rs  ingestion_ioc.rs  skills_basic.rs
examples/data/: memvid_card_qrels.jsonl  memvid_cards.jsonl  memvid_corpus.jsonl  memvid_qrels.jsonl
src/: agents.rs  dataset.rs  error.rs  harness.rs  knowledge_gain.rs  lib.rs  memory.rs  models.rs  report.rs  retrieval.rs  shadow.rs
src/ingestion/: graph.rs  ioc.rs  lint.rs  llm.rs  mod.rs  pipeline.rs  proposition.rs  report.rs  types.rs
src/ragas/: answer_relevance.rs  context_precision.rs  context_recall.rs  faithfulness.rs  harness.rs  mod.rs
src/skills/: grader.rs  graders.rs  groundedness.rs  harness.rs  mod.rs  ragas_grader.rs  runner.rs  task.rs  transcript.rs
tests/: agents_harness.rs  harness.rs  ingestion_ab.rs  ingestion_graph.rs  ingestion_ioc.rs  ingestion_llm.rs  ingestion_propositions.rs  live_ollama_ingestion.rs  memory_harness.rs  models_harness.rs  report_evidence.rs  shadow.rs  skills_groundedness.rs  skills_harness.rs  skills_ragas_grader.rs
tests/data/: tiny_qrels.jsonl
